fixed button spacing, added active element, service tabs

--- a/css/index.css
+++ b/css/index.css
@@ -497,19 +497,28 @@ footer .footer-copyright {
 .service-content-wrapper .tabs {
   margin-bottom: 8rem;
 }
-.service-content-wrapper .tabs .tab {
+.service-content-wrapper .tabs .topics {
+  justify-content: space-between;
+}
+.service-content-wrapper .tabs .topics .tab {
   justify-content: center;
   align-items: center;
   text-align: center;
   line-height: 4.5rem;
-  border: solid 1px red;
+  border: solid 1px #222222;
   width: 135px;
   height: 45px;
   cursor: pointer;
   font-weight: bold;
 }
-.service-content-wrapper .tabs .tab:hover {
-  text-decoration: underline;
+.service-content-wrapper .tabs .topics .tab:hover {
+  background: #222222;
+  color: #ffffff;
+}
+.service-content-wrapper .tabs .topics .active-tab {
+  background-color: #5e9fb9;
+  color: #ffffff;
+  border: 2px solid #222222;
 }
 .service-content-wrapper .tabs-content .tabs-content-text p {
   padding-top: 4rem;
