--- a/less/services.less
+++ b/less/services.less
@@ -45,23 +45,34 @@
 
     .tabs {
         margin-bottom: 8rem;
-    
-        .tab {
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            line-height: 4.5rem;
-            border: solid 1px red;
-            width: 135px;
-            height: 45px;
-            cursor: pointer;
-            font-weight: bold;
+        
+        .topics {
+            justify-content: space-between;
             
-                &:hover {
-                    text-decoration: underline;
-                }
-            
+            .tab {
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                line-height: 4.5rem;
+                border: solid 1px @mine-shaft;
+                width: 135px;
+                height: 45px;
+                cursor: pointer;
+                font-weight: bold;
+                    &:hover {
+                        background: @mine-shaft;
+                        color: @white;
+                    }
+                
+            }
+            .active-tab {
+                background-color: @hippie-blue;
+                color: @white;
+                border: 2px solid @mine-shaft;
+            }
         }
+
+        
     }
 
     .tabs-content {
